Minor adjustment to UI for each accesstype
Update on transfer order if accesstype is manager:
-transferfrom default value is branchid of manager

UI Update:
-Hides Multiple Display for Users and Manager

--- a/views/productiontransfer/productiontransfer.ejs
+++ b/views/productiontransfer/productiontransfer.ejs
@@ -81,7 +81,7 @@
                         <h6 class="m-0 font-weight-bold mt-2">Transfer Details</h6>
                     </div>
                     <div class="card-body extend">
-                        <div class="row mb-1">
+                        <div class="row mb-1 justify-content-center">
                             <div class="col-md-6 mb-1">
                                 <div class="input-group">
                                     <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Product" name="product"
