--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -245,10 +245,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="row mb-2">
+                        <% if (accesstype === "Owner" || accesstype === "Manager") { %>
                         <button id="toggleButton" name="toggleButton"
                             class=" ml-3 btn btn-circle btn-outline-inventory ">
                             <i class="fas fa-chevron-right"></i>
                         </button>
+                        <% } %>
                         <h6 class="mt-2 ml-3 font-weight-bold table-title">Purchase Order</h6>
                     </div>
                 </div>
