--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -82,25 +82,25 @@
           </a>
           <% } %>
 
-            <a class="collapse-item" href="/products">
-              <i class="far fa-circle mr-1 sb-icon-clr"></i>
-              <span>Products</span>
-            </a>
+          <a class="collapse-item" href="/products">
+            <i class="far fa-circle mr-1 sb-icon-clr"></i>
+            <span>Products</span>
+          </a>
 
-            <% if (accesstype==="Owner" || accesstype==="Manager" ) { %>
-              <a class="collapse-item" href="/category">
-                <i class="far fa-circle mr-1 sb-icon-clr"></i>
-                <span>Category</span>
-              </a>
+          <% if (accesstype==="Owner" || accesstype==="Manager" ) { %>
+          <a class="collapse-item" href="/category">
+            <i class="far fa-circle mr-1 sb-icon-clr"></i>
+            <span>Category</span>
+          </a>
 
 
-              <hr class="sidebar-divider" />
-              <h6 class="collapse-header text-black">Authentication:</h6>
-              <a class="collapse-item" href="/users">
-                <i class="far fa-circle mr-1 sb-icon-clr"></i>
-                <span>Users</span>
-              </a>
-              <% } %>
+          <hr class="sidebar-divider" />
+          <h6 class="collapse-header text-black">Authentication:</h6>
+          <a class="collapse-item" href="/users">
+            <i class="far fa-circle mr-1 sb-icon-clr"></i>
+            <span>Users</span>
+          </a>
+          <% } %>
       </div>
     </div>
   </li>
@@ -152,10 +152,12 @@
               <i class="fas fa-cart-arrow-down"></i>
               <span>Sales Items</span>
             </a> -->
+        <% if (accesstype === "Owner" || accesstype === "Manager") { %>
         <a class="collapse-item" href="/shiftreports">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Shifts Reports</span>
         </a>
+        <% } %>
         <a class="collapse-item" href="/cashreports">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Cash Reports</span>
@@ -184,22 +186,25 @@
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Product Inventory</span>
         </a>
+        <% if (accesstype === "Owner" || accesstype === "Manager") { %>
         <a class="collapse-item" href="/inventorycount">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Inventory Counts</span>
         </a>
-        <a class="collapse-item" href="/stockadjustment">
+        <!-- <a class="collapse-item" href="#">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Stock Adjustment</span>
-        </a>
+        </a> -->
         <a class="collapse-item" href="/inventoryvaluationreport">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Valuation Report</span>
         </a>
+        <% } %>
       </div>
     </div>
   </li>
 
+  
   <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseRequest" aria-expanded="true"
       aria-controls="collapseRequest">
@@ -209,10 +214,12 @@
     <div id="collapseRequest" class="collapse" aria-labelledby="headingTransactions" data-parent="#accordionSidebar">
       <div class="bg-options py-2 collapse-inner rounded">
         <h6 class="collapse-header">Contents:</h6>
+        <% if (accesstype === "Owner") { %>
         <a class="collapse-item" href="/purchaseorder">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Purchase Order</span>
         </a>
+        <% } %>
         <a class="collapse-item" href="/transferorder">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Transfer Orders</span>
@@ -225,6 +232,7 @@
     </div>
   </li>
 
+  <% if (accesstype === "Owner") { %>
   <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseProduction" aria-expanded="true"
       aria-controls="collapseProduction">
@@ -263,6 +271,7 @@
       </div>
     </div>
   </li>
+  <% } %>
 
   <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePromoDiscount"
@@ -286,6 +295,7 @@
     </div>
   </li>
 
+  <% if (accesstype === "Owner") { %>
   <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseHistory" aria-expanded="true"
       aria-controls="collapseHistory">
@@ -314,7 +324,7 @@
       </div>
     </div>
   </li>
-
+  <% } %>
   <!-- Divider -->
   <hr class="sidebar-divider" />
 
