UI adjustments and Scripts Update
UI Adjustment:
-Update displays based on accesstype: Functionality and options

Scripts Update:
-bug fix on shiftreports where pdf does not generate on success
-functionality updates based on accesstype

--- a/views/productprice/productpricescripts.ejs
+++ b/views/productprice/productpricescripts.ejs
@@ -78,7 +78,7 @@
             } else {
                 data.forEach(item => {
                     let action = '';
-                    if ('<%= accesstype%>' == "Owner" || '<%= accesstype%>' == "Manager"){
+                    if ('<%= accesstype%>' == "Owner"){
                         if (item.status === 'ACTIVE') {
                             action = `
                             <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#editModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>`;
