--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -149,10 +149,10 @@
           <span>Sales Details</span>
         </a>
         <!-- <a class="collapse-item" href="/salesitems">
-              <i class="fas fa-cart-arrow-down"></i>
-              <span>Sales Items</span>
-            </a> -->
-        <% if (accesstype === "Owner" || accesstype === "Manager") { %>
+          <i class="fas fa-cart-arrow-down"></i>
+          <span>Sales Items</span>
+        </a> -->
+        <% if (accesstype === "Owner") { %>
         <a class="collapse-item" href="/shiftreports">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Shifts Reports</span>
@@ -167,8 +167,8 @@
           <span>Product Price</span>
         </a>
         <!-- <a class="collapse-item" href="/pricechange">
-              <span>Price Change</span>
-            </a> -->
+          <span>Price Change</span>
+        </a> -->
       </div>
     </div>
   </li>
