--- a/views/transferorder/transferorderscripts.ejs
+++ b/views/transferorder/transferorderscripts.ejs
@@ -283,45 +283,87 @@
             } else {
                 data.forEach(item => {
                     let action = "";
-                    if (item.status === 'PENDING') {
-                        action = `<button id="approveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="approveBtn" data-toggle="modal" data-target="#transfer-approval">APPROVE</button>
+                    if ('<%= accesstype%>' === 'Owner'){
+                        if (item.status === 'PENDING') {
+                            action = `<button id="approveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="approveBtn" data-toggle="modal" data-target="#transfer-approval">APPROVE</button>
                                 <button id="cancelBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="cancelBtn">CANCEL</button>`;
 
-                    } else if (item.status === 'APPROVED') {
-                        action = `<button id="reportBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="reportBtn" data-toggle="modal" data-target="#transfer-report">REPORT</button>`;
+                        } else if (item.status === 'APPROVED') {
+                            action = `<button id="reportBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="reportBtn" data-toggle="modal" data-target="#transfer-report">REPORT</button>`;
+                        }
+                    }else{
+                        if (item.status === 'PENDING') {
+                            action = `Waiting for Approval`;
+
+                        } else if (item.status === 'APPROVED') {
+                            action = `<button id="reportBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="reportBtn" data-toggle="modal" data-target="#transfer-report">REPORT</button>`;
+                        }
                     }
+
                     const statusBackground = getStatusBackground(item.status);
                     const containerBackground = getStatusContainerBackground(item.status);
 
-                    const tr = $('<tr>').append(
-                        $('<td>', {
-                            text: item.transferid,
-                            'data-label': 'transfer ID',
-                            class: 'custom-mobile-align bmss-link',
-                            'data-toggle': 'modal',
-                            'data-target': '#transfer-details-modal'
-                        }),
-                        $('<td>', { text: item.fromlocationid, 'data-label': 'Transfer Origin', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.tolocationid, 'data-label': 'Transfer Location', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.fromlocbranchname, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.tolocbranchname, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.transferdate, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.totalquantity, 'data-label': 'Total Quantity', class: 'custom-mobile-align' }),
-                        $('<td>', {
-                            text: item.notes || '[No Notes]',
-                            'data-label': 'Notes',
-                            class: 'custom-mobile-align'
-                        }),
-                        $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
-                            $('<div>', { class: containerBackground }).append(
-                                $('<span>', { text: item.status, class: statusBackground })
-                            )
-                        ),
-                        $('<td>', { html: action, 'data-label': 'Action', class: '' })
-                    );
+                    if ('<%= accesstype%>' === 'Manager') {
+                        if ('<%= branchid%>' === item.fromlocationid) {
+                            const tr = $('<tr>').append(
+                                $('<td>', {
+                                    text: item.transferid,
+                                    'data-label': 'transfer ID',
+                                    class: 'custom-mobile-align bmss-link',
+                                    'data-toggle': 'modal',
+                                    'data-target': '#transfer-details-modal'
+                                }),
+                                $('<td>', { text: item.fromlocationid, 'data-label': 'Transfer Origin', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.tolocationid, 'data-label': 'Transfer Location', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.fromlocbranchname, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.tolocbranchname, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.transferdate, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.totalquantity, 'data-label': 'Total Quantity', class: 'custom-mobile-align' }),
+                                $('<td>', {
+                                    text: item.notes || '[No Notes]',
+                                    'data-label': 'Notes',
+                                    class: 'custom-mobile-align'
+                                }),
+                                $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
+                                    $('<div>', { class: containerBackground }).append(
+                                        $('<span>', { text: item.status, class: statusBackground })
+                                    )
+                                ),
+                                $('<td>', { html: action, 'data-label': 'Action', class: '' })
+                            );
+                            tableBody.append(tr);
 
-                    tableBody.append(tr);
+                        }
+                    } else {
+                        const tr = $('<tr>').append(
+                            $('<td>', {
+                                text: item.transferid,
+                                'data-label': 'transfer ID',
+                                class: 'custom-mobile-align bmss-link',
+                                'data-toggle': 'modal',
+                                'data-target': '#transfer-details-modal'
+                            }),
+                            $('<td>', { text: item.fromlocationid, 'data-label': 'Transfer Origin', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.tolocationid, 'data-label': 'Transfer Location', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.fromlocbranchname, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.tolocbranchname, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.transferdate, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.totalquantity, 'data-label': 'Total Quantity', class: 'custom-mobile-align' }),
+                            $('<td>', {
+                                text: item.notes || '[No Notes]',
+                                'data-label': 'Notes',
+                                class: 'custom-mobile-align'
+                            }),
+                            $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
+                                $('<div>', { class: containerBackground }).append(
+                                    $('<span>', { text: item.status, class: statusBackground })
+                                )
+                            ),
+                            $('<td>', { html: action, 'data-label': 'Action', class: '' })
+                        );
+                        tableBody.append(tr);
 
+                    }
                 });
             }
         }
