Added Request Notification
Added Request Notification:
-request_notification table
-request notification insert on transfer order request
-fetch notification based on userid
-Added script for display of notification

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -214,12 +214,12 @@
     <div id="collapseRequest" class="collapse" aria-labelledby="headingTransactions" data-parent="#accordionSidebar">
       <div class="bg-options py-2 collapse-inner rounded">
         <h6 class="collapse-header">Contents:</h6>
-        <% if (accesstype === "Owner") { %>
+        <!-- <% if (accesstype === "Owner") { %> -->
         <a class="collapse-item" href="/purchaseorder">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Purchase Order</span>
         </a>
-        <% } %>
+        <!-- <% } %> -->
         <a class="collapse-item" href="/transferorder">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Transfer Orders</span>
